making minor changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body style="background: url(/Users/anthony/Desktop/Code/ucf/Homework/sanchez2194.github.io/assets/images/retina_wood.png)">
     <header>
 
         <h1>Anthony Sanchez</h1>
