re arranging my files to submit homework properly

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,15 +42,15 @@
 
                    <hr id="line-portfolio" color="teal" style="width: 580px; height: 1px;">
                 
-                   <img src="./assets/images/download (1).jpeg">
+                   <img a href="#" src="./assets/images/download (1).jpeg">
 
-                   <img src="./assets/images/download (2).jpeg">
+                   <img a href="#" src="./assets/images/download (2).jpeg">
 
-                   <img src="./assets/images/download (3).jpeg">
+                   <img a href="#" src="./assets/images/download (3).jpeg">
 
-                   <img src="./assets/images/download (4).jpeg">
+                   <img a href="#" src="./assets/images/download (4).jpeg">
 
-                   <img src="./assets/images/download (5).jpeg">
+                   <img a href="#" src="./assets/images/download (5).jpeg">
                  </div>
         
         <footer id="footer-portfolio">
